# perfkit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md
cmake/: PerfkitImGuiImport.cmake
examples/: CMakeLists.txt  apptemplate.cpp  automation-argparse.cpp  automation-perfkit.cpp  automation.cpp  curses-practice.cpp  doctest.h  example-cli.cpp  example-ftxui-extension.cpp  example-interactive-terminal.cpp  example-net.cpp  example-tui.cpp  example-web.cpp  imtui-common.h  imtui-demo.cpp  imtui-demo.h  test_class.cpp  test_class.hpp  test_configs.hxx
extensions/ftxui/: CMakeLists.txt
extensions/ftxui/include/perfkit/: ftxui-extension.hpp
extensions/ftxui/include/perfkit/extension/: tui-ftxui.h
extensions/ftxui/src/: config_browser.hpp  ftxui-extension.cpp  net-ftxui.cpp  trace_browser.hpp  tui-ftxui.cpp
extensions/net/: CMakeLists.txt  TODO.md  protocol.thrift
extensions/net-provider/: CMakeLists.txt
extensions/net-provider/protocol/: CMakeLists.txt
extensions/net-provider/protocol/src/: net-proto.cpp
extensions/net-provider/src/: basic_dispatcher_impl.cpp  basic_dispatcher_impl.hpp  dispatcher.cpp  dispatcher.hpp  net-context.cpp  net-provider.cpp  net-terminal.hpp  net_session.cpp  net_session.hpp  net_terminal.cpp  net_terminal.hpp  server_mode_dispatcher.cpp  server_mode_dispatcher.hpp  utils.cpp  utils.hpp
extensions/net-v2/: CMakeLists.txt  protocol.md
extensions/net-v2/src/: net.cpp  net_terminal.cpp  net_terminal.hpp  net_terminal_adapter.hpp  utils.cpp  utils.hpp
extensions/net-v2/src/context/: command_context.cpp  command_context.hpp  config_context.cpp  config_context.hpp  trace_context.hpp
extensions/net/src/: basic_dispatcher_impl.cpp  basic_dispatcher_impl.hpp  dispatcher.cpp  dispatcher.hpp  messages.hpp  net-context.cpp  net-context.hpp  net-provider.cpp  net-terminal.cpp  net-terminal.hpp  net.cpp  server_mode_dispatcher.cpp  server_mode_dispatcher.hpp  utils.cpp  utils.hpp
extensions/net/src/contexts/: config.cpp  config.hpp  config_watcher.cpp  config_watcher.hpp  graphics_watcher.cpp  graphics_watcher.hpp  if_watcher.hpp  trace_watcher.cpp  trace_watcher.hpp
ftxui-extension/: CMakeLists.txt
ftxui-extension/include/perfkit/: ftxui-extension.hpp
ftxui-extension/include/perfkit/ftxui/: option-panel.hpp
ftxui-extension/src/: config_browser.hpp  ftxui-extension.cpp  option-panel.cpp  trace_browser.hpp
modules/: CMakeLists.txt
modules/apptemplate/: CMakeLists.txt  perfkit-appbase.hpp  perfkit-main.cpp
modules/backend-utils/: CMakeLists.txt  backend-utils.cpp
modules/cli/: CMakeLists.txt
modules/cli/src/: basic_interactive_terminal.cpp  basic_interactive_terminal.hpp
modules/core/: CMakeLists.txt  fix.hpp
modules/core/include/perfkit/: appctrl.h  configs-v2.h  configs.h  fwd.hpp  graphic.h  logging.h  system.h  terminal.h  traces.h
modules/core/src/: commands.cpp  config-flags.cpp  configs-v2-flags.cpp  configs-v2.cpp  configs.cpp  graphic-impl.cpp  logging.cpp  main.cpp  perfkit.cpp  terminal-linux.cpp  terminal-windows.cpp  terminal.cpp  tracer.cpp
modules/ftxui/: CMakeLists.txt
modules/ftxui/include/perfkit/: ftxui-extension.hpp
modules/ftxui/src/: config_browser.hpp  ftxui-extension.cpp  net-ftxui.cpp  trace_browser.hpp
modules/graphics/: CMakeLists.txt
modules/graphics/include/perfkit/: graphics.h
modules/graphics/src/: handle_registry.hxx  storage.cpp
modules/libremotegl-client/: CMakeLists.txt
modules/libremotegl-protocol/: CMakeLists.txt
modules/libremotegl-protocol/src/: bodies.cpp
modules/libremotegl-server/: CMakeLists.txt
modules/libremotegl-server/src/: context.cpp  context_impl.cpp  remotegl.cpp  resource.hpp
modules/libremotegl-server/src/resource/: texture.hpp
modules/localization/: CMakeLists.txt
modules/localization/include/perfkit/: localize.h
modules/localization/src/: localize.cpp
modules/mongo-config/: CMakeLists.txt  perfkit-mongo-config-io-test.cpp  perfkit-mongo-config-io.cpp  perfkit-mongo-config-io.hpp
modules/net/: CMakeLists.txt
modules/net-v2/: CMakeLists.txt
modules/net-v2/apptemplate/: CMakeLists.txt  perfkit-appbase.hpp  perfkit-main.cpp
modules/net-v2/src/: net.cpp  net_terminal.cpp  net_terminal.hpp  net_terminal_adapter.cpp  net_terminal_adapter.hpp  utils.cpp  utils.hpp
modules/net-v2/src/context/: command_context.hpp  config_context.cpp  config_context.hpp  graphic_context.cpp  graphic_context.hpp  trace_context.cpp  trace_context.hpp
modules/net/src/: basic_dispatcher_impl.cpp  basic_dispatcher_impl.hpp  dispatcher.cpp  dispatcher.hpp  net-context.cpp  net-context.hpp  net-terminal.cpp  net-terminal.hpp  net.cpp  server_mode_dispatcher.hpp  utils.cpp  utils.hpp
modules/net/src/contexts/: config_watcher.cpp  config_watcher.hpp  graphics_watcher.cpp  graphics_watcher.hpp  if_watcher.hpp  trace_watcher.cpp  trace_watcher.hpp
modules/os/: CMakeLists.txt
modules/web/: CMakeLists.txt  protocol.md
modules/web/front/: package-lock.json  package.json
modules/web/front/public/: index.html
modules/web/front/src/: App.scss  App.tsx  Utils.tsx  index.tsx
modules/web/include/perfkit/: web.h
modules/web/public/: asset-manifest.json  index.html
modules/web/src/: config_server.cpp  config_server.hpp  graphic_server.cpp  graphic_server.hpp  interface.cpp  interface.hpp  trace_server.cpp  trace_server.hpp  web.cpp  web_terminal.cpp  web_terminal.hpp
modules/web/static/: index.html
ncurses-extension/: CMakeLists.txt
ncurses-extension/include/perfkit/: curses.h
third/: CMakeLists.txt
third/PicoSHA2/: README.md  picosha2.h
third/asio-1.20.0/: CMakeLists.txt
third/cpph/: CMakeLists.txt
third/cpph/include/perfkit/: __cppheaders_ns__  __cppheaders_ns__.h
third/linenoise-1.0/: linenoise.c  linenoise.h
third/range-v3-master/cmake/: ranges_flags.cmake
third/taywee-args/: CMakeLists.txt
third/taywee-args/include/taywee/: args.hxx
ui-bundled/: CMakeLists.txt
ui-bundled/imgui/: CMakeLists.txt
ui-bundled/imtui/: CMakeLists.txt
ui-bundled/imtui/include/imtui/: imtui.h
(+192 files in other folders)
